# llml

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: mat2.rs  mat3.rs  results.csv  vec2.rs  vec3.rs  vec4.rs
derive/: Cargo.toml
derive/src/: hypot.rs  lib.rs  sin_cos.rs  tan.rs  zero.rs
src/: defs.rs  lib.rs  linalg.rs  polar.rs  poly.rs
src/aarch64/: mod.rs  vec2.rs  vec3.rs  vec4.rs
src/arm/: complex.rs  mat2.rs  mat3.rs  mod.rs  vec2.rs  vec3.rs  vec4.rs
src/arm/complex/: float.rs  mod.rs
src/arm/double/: mat2.rs  mat3.rs  mod.rs
src/defs/: mat2.rs  mod.rs  vec2.rs  vec3.rs  vec4.rs
src/defs/mat/: mat2.rs  mat3.rs  mat4.rs  mod.rs
src/defs/others/: complx.rs  mod.rs  rand.rs  traits.rs
src/defs/transf/: mod.rs  transf2.rs
src/defs/vec/: vec2.rs  vec3.rs  vec4.rs
src/extra/: array.rs  complex.rs  consts.rs  iter.rs  mod.rs  never_short.rs
src/frac/: frac.rs  macros.rs  mod.rs
src/generics/: complex.rs  debug.rs  instructions.rs  mat.rs  mod.rs  rand.rs  vec.rs
src/generics/serde/: deserialize.rs  mod.rs  serialize.rs
src/mat/: det.rs  macros.rs  mod.rs  seq.rs
src/naive/: complx.rs  mod.rs  vec2.rs  vec3.rs  vec4.rs
src/simd/: mat2.rs  mat3.rs  mat4.rs  mod.rs  vec2.rs  vec3.rs  vec4.rs
src/traits/: complex.rs  consts.rs  mappings.rs  mod.rs
src/utils/: mod.rs
src/vec/: macros.rs  mod.rs  mt.rs  seq.rs
src/x86/: complex.rs  complx.rs  mat2.rs  mod.rs  vec2.rs  vec3.rs  vec4.rs
src/x86/avx/: mat3.rs
src/x86/double/: mod.rs  vec2.rs
src/x86/double/avx/: mat2.rs  mat3.rs  mod.rs  vec3.rs  vec4.rs
src/x86/double/sse/: mat2.rs  mat3.rs  mod.rs  vec3.rs  vec4.rs
src/x86/int/: mod.rs
src/x86/mat/: mat2.rs  mod.rs
src/x86/mat3/: avx.rs  mod.rs  sse.rs
src/x86/sse/: mat3.rs  mod.rs
tests/: complex.rs  complexd.rs  mat2.rs  mat2d.rs  mat3.rs  mat3d.rs  vec2.rs  vec2d.rs  vec3.rs  vec3d.rs  vec4.rs  vec4d.rs
testx/: Cargo.toml
testx/src/: main.rs
