[package]
name = "llml"
version = "0.2.1"
edition = "2021"
description = "Implementation of basic math data types with high level frontend and low level backend"
readme = "README.md"
repository = "https://github.com/Aandreba/llml"
license = "MIT OR Apache-2.0"
keywords = ["sse", "instrinsics", "simd", "neon", "math"]
categories = ["data-structures", "hardware-support", "mathematics"]

[features]
llml_serde = ["serde", "bytemuck"]
llml_rand = ["rand", "randerive"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
derive_more = "0.99.17"
serde = { version = "1.0.132", features = ["derive"], optional = true }
bytemuck = { version = "1.7.3", optional = true }
rand = { version = "0.8.4", optional = true }
randerive = { version = "1.2.0", optional = true }

[dev-dependencies]
criterion = "0.3"
rand = "0.8.4"
serde_json = "1.0"

[[bench]]
name = "vec3"
harness = false
