[package]
name = "llml_derive_crate"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Aandreba/llml/derive"
license = "MIT OR Apache-2.0"
keywords = ["asm", "assembly", "sse", "instrinsics", "simd"]
categories = ["data-structures", "hardware-support", "mathematics"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
syn = { version = "1.0.84", features = ["full", "extra-traits", "printing"] }
quote = "1.0.14"
itertools = "0.10.3"